# ros2

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/my_robot_bringup/: package.sh
install/my_robot_bringup/share/my_robot_bringup/config/: gazebo_bridge.yaml
install/my_robot_bringup/share/my_robot_bringup/launch/: two_robots_waterworld_ns.launch.xml  two_robots_waterworld_xacro.launch.py
install/my_robot_bringup/share/my_robot_bringup/models/Animal_Planet_Foam_2Headed_Dragon/meshes/: model.mtl
install/my_robot_bringup/share/my_robot_bringup/models/Schleich_Bald_Eagle/: model.sdf
install/my_robot_bringup/share/my_robot_bringup/models/Schleich_Bald_Eagle/meshes/: model.mtl
install/my_robot_bringup/share/my_robot_bringup/models/Schleich_Therizinosaurus_ln9cruulPqc/: model.sdf
install/my_robot_bringup/share/my_robot_bringup/models/Schleich_Therizinosaurus_ln9cruulPqc/meshes/: model.mtl
install/my_robot_bringup/share/my_robot_bringup/models/Transformers_Age_of_Extinction_Stomp_and_Chomp_Grimlock_Figure/: model.sdf
install/my_robot_bringup/share/my_robot_bringup/models/Transformers_Age_of_Extinction_Stomp_and_Chomp_Grimlock_Figure/meshes/: model.mtl
install/my_robot_bringup/share/my_robot_bringup/worlds/: eddie_world.sdf  waterworld.sdf
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_description/share/my_robot_description/launch/: display.launch.xml
install/my_robot_description/share/my_robot_description/urdf/: emiliobot.urdf.xacro  mobile_base_potatobot_gazebo.xacro  my_robot.urdf.xacro  potatobot.urdf.xacro
install/robot_legion_teleop_python/lib/robot_legion_teleop_python/: fpv_camera_mux  legion_teleop_key  potato_legion_teleop  reset_gz  robot_heartbeat
install/robot_legion_teleop_python/share/robot_legion_teleop_python/: package.ps1  package.sh  package.xml
log/: latest_build
media/: media.md
src/: todo.txt
src/my_robot_bringup/config/: gazebo_bridge.yaml
src/my_robot_bringup/launch/: emiliobot_gazebo.launch.xml  potatobot_gazebo.launch.xml  two_robots_simple_test_ns.launch.xml  two_robots_simple_test_xacro.launch.py  two_robots_waterworld_xacro.launch.py
src/my_robot_bringup/models/Animal_Planet_Foam_2Headed_Dragon/: model.sdf
src/my_robot_bringup/models/Weisshai_Great_White_Shark/: model.sdf
src/my_robot_bringup/models/branch_leaves/: model.sdf
src/my_robot_bringup/worlds/: potatoland.sdf  simple_test.sdf  waterworld.sdf
src/my_robot_description/urdf/: emiliobot.urdf.xacro  my_robot.urdf.xacro  potatobot.urdf.xacro
src/robot_legion_teleop_python/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_legion_teleop_python/robot_legion_teleop_python/: CMakeLists.txt  fpv_camera_mux.py  potato_teleop_legion_key.py  teleop_legion_key.py
