<?xml version="1.0"?>
<package format="3">
  <name>robot_legion_teleop_python</name>
  <version>0.0.1</version>
  <description>
    Keyboard teleoperation node for Robot Legion simulations.
  </description>

  <maintainer email="emilio@vitruvian.systems">Vitruvian Systems LLC</maintainer>
  <license>CC-BY-NC-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_python</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
